Upgrade a few pinned dependencies (#2359)